2010-01-02  Matevz Tadel  <matevz.tadel@ijs.si>

	* GledBuildExternal.pm:
	Use rsync option -t instead of -a when downloading a package.

2009-12-25  Matevz Tadel  <matevz.tadel@ijs.si>

	Changes for OSX build. Use GLEW from ROOT.

	* external/glew:
	* external/lcms:
	* external/attic/glew:
	* external/attic/lcms:
	Move glew and lcms to attic.
	GLEW from ROOT (or system) is used now.
	lcms was not being used / built.

	* external/Makefile:
	Remove glew from package list.

	* external/freealut/freealut.pl
	Use cmake build.

	* external/openal/openal.pl:
	Do not build for OSX - OpenAL is provided as framework.

2009-12-24  Matevz Tadel  <matevz.tadel@ijs.si>

	* external/DevIL/DevIL.pl:
	* external/freealut/freealut.pl:
	Pass PREFIX escaped so that it only expands in final make invocation.

2009-12-24  Matevz Tadel  <matevz.tadel@ijs.si>

	Allow passing of XXXFLAGS to inferior configures.
	Improve build procedure -- less has to be written in package pl files.

	* configure.ac:
	If no CFLAGS, CXXFLAGS were passed, make sure they remain empty.
	Add EXTRA_PATHS config var to allow passing of additional
	installation directories to all sub-configures.

	* GledBuildConf.pm.in:
	* MakeBuildConf.inc.in:
	Set GB_XXXFLAGS variables to corresponding XXXFLAGS.
	Set EXTRA_PATHS variable.

	* GledBuildExternal.pm:
	Add handling of XXXFLAGS variables.
	Add functions add_xxxflags().
	Add function add_search_path().
	The configure target is now generated in a sophisticated way so
	that all XXXFLAGS get propagated if they are not empty.
	Special function target_configure() was added to perform this.

	* README:
	Add a note about XXXFLAGS passing and EXTRA_PATHS.

	* external/DevIL/DevIL.pl:
	* external/fltk-mt/fltk-mt.pl:
	* external/fltk/fltk.pl:
	* external/freealut/freealut.pl:
	* external/gts/gts.pl:
	* external/lcms/lcms.pl:
	* external/openal/openal.pl:
	Simplify and improve using new features.

2009-12-15  Matevz Tadel  <matevz.tadel@ijs.si>
