@@ -1,3 +1,8 @@
+2010-01-05  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	* gled/Makefile:
+	Pass extra-paths from gled-builder configure to gled-build configure.
+
 2010-01-02  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	* GledBuildExternal.pm:
